<resources>
    <string name="app_name">听世界听书</string>
    <string name="hello_world">峰哥，收到回复！！！</string>
    <string name="action_settings">Settings</string>
    <string name="listen_world">听世界</string>
    <!--  listview上下拉提示语  -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_nomore">到底了，没有更多了</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <!--  listview上下拉提示语  -->
    <!-- 底部导航 -->
    <string name="city_book">书城</string>
    <string name="home_page">首页</string>
    <string name="record">记录</string>
    <string name="myself">我的</string>
    <string name="title_activity_hot_rank_frame">HotRankFrame</string>
    <string name="title_activity_hot_anchor_frame">HotAnchorFrame</string>
    <string name="title_activity_fine_recommen_frame">FineRecommenFrame</string>
    <!-- 底部导航 -->
    <!-- 书城 -->
    <string name="hot_listener_rank">热听排行</string>
    <string name="hot_anchor">热门主播</string>
    <string name="fine_reconmmend">精品推荐</string>
    <!--  contentDescription  -->
    <string name="contentDescription" />
    <string name="hot_rank_more">更多</string>
    <string name="reward_and_urge_mor">打赏催更</string>
    <string name="reward_and_urge_anchor">打赏主播</string>
    <string name="follow_anchor">关注主播</string>
    <!-- 书城 -->
    <!-- 主播 -->
    <string name="anchor_work">主播作品</string>
    <string name="folower_anchor">关注他的</string>
    <string name="reward_rank">打赏排名</string>
    <string name="all_bofang">共播放</string>
    <string name="text_zhang">章</string>
    <string name="yiyou">已有</string>
    <string name="have_follow_number">位听友关注了他</string>
    <string name="reward_rank_book">打赏排行榜</string>
    <string name="reward_rank_all_given">共收到</string>
    <string name="listen_dou">听豆</string>
    <string name="hejidashang">合计打赏</string>
    <string name="one_tingdou">1听豆</string>
    <string name="five_tingdou">5听豆</string>
    <string name="ten_tingdou">10听豆</string>
    <string name="one_five_tingdou">15听豆</string>
    <string name="two_zero_tingdou">20听豆</string>
    <string name="five_zero_tingdou">50听豆</string>
    <string name="one_zero_zero_tingdou">100听豆</string>
    <string name="one_zero_zero_zero_tingdou">1000听豆</string>
    <string name="sure_reward">确定打赏</string>
    <!-- 主播 -->
    <!-- 播放 -->
    <string name="brief_introduction">简介:</string>
    <string name="open_text">展开</string>
    <string name="paixu">排序(正序)</string>
    <string name="tiaozhuan">跳转</string>
    <string name="send_text">发送</string>
    <string name="discuss_text">评论</string>
    <string name="i_will_discuss">我来评论...</string>
<string name="brief_introduction_test">
《鬼吹灯》是一部中国大陆的网络小说，作者为天下霸唱，主要内容 是盗墓，是一部极为经典的悬疑盗墓小说，也迅速成为了图书馆销售排行榜的榜首。之后作继续创作第二部，
</string>
<string name="brief_introduction_test_two">
鬼吹灯》是一部中国大陆的网络小说，作者为天下霸唱， 主要内容是盗墓寻宝，是一部极为经典的悬疑盗墓小说，这部小说也迅速成为了图书销售排行榜的榜首。 之后作者继续创作第二部，内容涉及陈瞎子和鹧鸪哨之盗墓往事。
</string>
    <!-- 播放 -->
    <!-- 记录 -->
    <string name="last_listener">最近收听</string>
    <string name="have_dow">已下载</string>
    <string name="colection_text">收藏</string>
    <!-- 记录 -->
    <!-- 我的 -->
    <string name="username_text">用户名</string>
    <string name="password_text">密码</string>
    <string name="login_immediately_text">立即登录</string>
    <string name="forgect_password_text">忘记密码？</string>
    <string name="regist_immediately_text">立即注册</string>
    <string name="other_three_login">第三方登录</string>
    <string name="rank_text">等级:</string>
    <string name="my_work_text">我的作品</string>
    <string name="my_see_on_text">我的关注</string>
    <string name="my_dou_text">我的听豆</string>
    <string name="recommend_friends_text">推荐给好友</string>
    <string name="setting_text">设置</string>
    <string name="phone_number_text">手机号</string>
    <string name="identifying_code_text">验证码</string>
    <string name="get_identifying_code_text">获取验证码</string>
    <string name="input_password_too">再次输入密码</string>
    <string name="all_play_text">共播放</string>
    <string name="have_see_text">已关注</string>
    <string name="wei_listener_friends">位好友</string>
    <string name="reset_password_text">更改密码</string>
    <string name="edit_password">输入密码</string>
    <string name="edit_password_too">再次输入密码</string>
    <string name="sure_text">确定</string>
    <string name="guanzhudu">关注度:</string>
    <string name="zhanghao">账号:</string>
    <string name="yue">余额:</string>
    <string name="vip_time">会员到期至:</string>
    <string name="to_pay_listener_dou">充值听豆</string>
    <string name="to_pay_listener_member">充值会员</string>
    <string name="share_sina_text">分享到微博</string>
    <string name="share_qq_text">分享到QQ</string>
    <string name="share_weixin_text">分享到微信</string>
    <string name="share_friendscircle_text">分享到朋友圈</string>
    <string name="share_sina">微博</string>
    <string name="share_qq">QQ</string>
    <string name="share_weixin">微信</string>
    <string name="share_friendscircle">朋友圈</string>
    <string name="tou_xiang_text">头像</string>
    <string name="nick_name_text">昵称</string>
    <string name="sex_text">性别</string>
    <string name="person_sign_text">个性签名</string>
    <string name="more_text">更多</string>
    <string name="new_text">最新</string>
    <string name="hot_text">热门</string>
    <string name="recommend_text">推荐</string>
    <string name="remind">提示</string>
    <string name="please_choose_sex_text">性别选择</string>
    <string name="me_is_man_fanse">男听迷</string>
    <string name="me_is_women_fanse">女听迷</string>
    <string name="sure_save_text">确认保存</string>
    <string name="sure_save_context">确定要保存修改的资料吗？</string>
    <string name="choose_need_moves">选择照片</string>
    <string name="photo_choose">相册选取</string>
    <string name="camer_pai_se">相机拍摄</string>
    <string name="yes_text">是</string>
    <string name="no_text">否</string>
    <string name="exit_login_text">注销账户</string>
    <string name="about_me_text">关于我们</string>
    <string name="search_edit_hit_text">寻找您喜欢听的内容</string>
    <string name="collect_the_book">收藏此书</string>
    <string name="pay_stytle_text">充值方式</string>
    <string name="weixn_pay">微信充值</string>
    <string name="ali_pay">支付宝充值</string>
    <string name="edit_you_comment">请输入您的评论</string>
    <string name="check_paixu">请您选择排序方式</string>
    <string name="time_setting">定时</string>
    <string name="zheng_paixu">正序</string>
    <string name="fan_paixu">反序</string>

    <string name="fiveSeconde">10分钟后停止</string>
    <string name="tenMinutes">30分钟后停止</string>
    <string name="twentyMinutes">60分钟后停止</string>
    <string name="thirtyMinutes">90分钟后停止</string>
    <string name="sixtyMinutes">120分钟后停止</string>
    <string name="nintyMinutes">180分钟后停止</string>

    <string name="app_tip">提示</string>
    <item name="cb_item_tag" type="id"></item>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <!-- 我的 -->
</resources>