<?xml version="1.0" encoding="utf-8"?>
<com.ting.view.RootLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/title"
        layout="@layout/base_title_layout" />

    <EditText
        android:id="@+id/password_editext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpx86"
        android:layout_marginLeft="@dimen/dpx100"
        android:layout_marginRight="@dimen/dpx100"
        android:layout_marginTop="@dimen/dpx180"
        android:background="@mipmap/grey_editext_background"
        android:hint="@string/edit_password"
        android:paddingLeft="10dp"
        android:textColorHint="@color/c808080"
        android:textSize="@dimen/px30"
        android:password="true"/>

    <EditText
        android:id="@+id/password_editext_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpx86"
        android:layout_marginLeft="@dimen/dpx100"
        android:layout_marginRight="@dimen/dpx100"
        android:layout_marginTop="@dimen/dpx30"
        android:background="@mipmap/grey_editext_background"
        android:hint="@string/edit_password_too"
        android:paddingLeft="10dp"
        android:textColorHint="@color/c808080"
        android:textSize="@dimen/px30"
        android:password="true"/>

    <TextView
        android:id="@+id/sure_reset_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dpx86"
        android:layout_marginLeft="@dimen/dpx100"
        android:layout_marginRight="@dimen/dpx100"
        android:layout_marginTop="@dimen/dpx32"
        android:background="@mipmap/login_immediately_image"
        android:gravity="center"
        android:text="@string/sure_text"
        android:textColor="@color/white"
        android:textSize="@dimen/px34" />


</com.ting.view.RootLayout>
