<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/dpx650"
        android:layout_height="@dimen/dpx330"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dpx30"
        android:layout_marginRight="@dimen/dpx30"
        android:background="@drawable/setting_photo_dialog_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpx100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/remind"
                android:textColor="@color/c14acf0"
                android:textSize="@dimen/px34" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpx4"
            android:background="@color/c14acf0"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpx122">

            <TextView
                android:id="@+id/title_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dpx40"
                android:layout_marginTop="@dimen/dpx26"
                android:text="@string/sure_save_context"
                android:textColor="@color/c3d3d3d" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpx2"
            android:background="@color/cdcdcdd"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpx102"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_sure_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_text"
                android:textColor="@color/c666666"
                android:textSize="@dimen/px30" />

            <View
                android:layout_width="@dimen/dpx2"
                android:layout_height="match_parent"
                android:background="@color/cdcdcdd"></View>

            <TextView
                android:id="@+id/yes_sure_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes_text"
                android:textColor="@color/c666666"
                android:textSize="@dimen/px30" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
